Possibility for notebooks

--- a/dataset_exploration/dataset_exploration.ipynb
+++ b/dataset_exploration/dataset_exploration.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +29,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze"
+    "## Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_path = \"../configs/tdt4265.py\"\n",
+    "cfg = get_config(config_path)\n",
+    "dataset_to_analyze = \"train\"  # or \"val\"\n",
+    "dataloader = get_dataloader(cfg, dataset_to_analyze)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Aspect ratio distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,32 +90,18 @@
     "        y_label=\"Objects\",\n",
     "        title=f\"Aspect ratios histogram for {object}\",\n",
     "        show=True\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def analyze_something(dataloader, cfg):\n",
-    "    annotations_train = read_annotation(get_dataset_dir(\"tdt4265_2022/train_annotations.json\"))\n",
-    "    for category in annotations_train[\"categories\"]:\n",
-    "        create_object_aspect_ratio_histogram(annotations_train, object=category[\"name\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Main"
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label map is: {0: 'background', 1: 'car', 2: 'truck', 3: 'bus', 4: 'motorcycle', 5: 'bicycle', 6: 'scooter', 7: 'person', 8: 'rider'}\n",
       "Object is: car\n"
      ]
     },
@@ -240,14 +252,9 @@
     }
    ],
    "source": [
-    "config_path = \"../configs/tdt4265.py\"\n",
-    "cfg = get_config(config_path)\n",
-    "dataset_to_analyze = \"train\"  # or \"val\"\n",
-    "\n",
-    "print(\"Label map is:\", cfg.label_map)\n",
-    "\n",
-    "dataloader = get_dataloader(cfg, dataset_to_analyze)\n",
-    "analyze_something(dataloader, cfg)"
+    "annotations_train = read_annotation(get_dataset_dir(\"tdt4265_2022/train_annotations.json\"))\n",
+    "for category in annotations_train[\"categories\"]:\n",
+    "    create_object_aspect_ratio_histogram(annotations_train, object=category[\"name\"])"
    ]
   }
  ],
