--- a/dataset_exploration/dataset_exploration.ipynb
+++ b/dataset_exploration/dataset_exploration.ipynb
@@ -22,7 +22,7 @@
     "from dataset_exploration.utils import create_histogram, read_annotation\n",
     "from configs.utils import get_dataset_dir\n",
     "import sys\n",
-    "from analyze_stuff import get_config, get_dataloader"
+    "from analyze_stuff import get_config, get_dataloader\n"
    ]
   },
   {
